@@ -30,8 +30,13 @@ public class intEnumPrinter extends FieldPrinter
       String ret= super.valueToString() +" {";
       for(java.util.Enumeration e= getValues(), f= getNames()
       ; e.hasMoreElements(); )
-        ret+= " "+f.nextElement()+"="+e.nextElement()+" ";
-        
+      {
+	Integer val=(Integer)e.nextElement();
+        ret+= " \""+f.nextElement()+"\"="
+	   +val
+	   +(getDeprecatedValues().contains(val)?" deprecated":"")
+	   +(e.hasMoreElements()?",":"");
+      }        
       return ret+"}";
    }
 }
